k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: chatapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
        namspace: chatapp
    spec:
      containers:
      - name: chatapp-backend
        image: shantanu8686/chatapp-backend:latest
      
        ports:
        - containerPort: 5001
