k8s/mongodb-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: mongodb-deployment
  namespace: chatapp

spec:
  replicas: 1

  selector:
    matchLabels:
      app: mongodb

  template:
    metadata:
      labels:
        app: mongodb

    spec:
      containers:
        - name: chatapp-mongodb
          image: mongo:latest

          ports:
            - containerPort: 27017

          volumeMounts:
            - name: mongo-persistent-storage
              mountPath: /data/db

      volumes:
        - name: mongo-persistent-storage
          persistentVolumeClaim:
            claimName: mongo-pvc
